--- a/test-output/old/nopcomerce regression suite/classes.html
+++ b/test-output/old/nopcomerce regression suite/classes.html
@@ -4,6 +4,44 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
+<td>tests.Loginwithoutcredentials</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>UserNoCredentials</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>waitshoya2</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>close</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>TakeScreen</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>waitshoya</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td>tests.UserCanLoginTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
