--- a/test-output/old/nopcomerce regression suite/methods.html
+++ b/test-output/old/nopcomerce regression suite/methods.html
@@ -1,12 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>nopcomerce regression suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b0ed80">  <td>19/07/08 09:10:45</td>   <td>0</td> <td title="&gt;&gt;TestBase.startDriver(java.lang.String)[pri:0, instance:tests.UserCanLoginTest@4516af24]">&gt;&gt;startDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1849201180</td>   <td></td> </tr>
-<tr bgcolor="b0ed80">  <td>19/07/08 09:10:53</td>   <td>8043</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.waitshoya2()[pri:0, instance:tests.UserCanLoginTest@4516af24]">&gt;&gt;waitshoya2</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1849201180</td>   <td></td> </tr>
-<tr bgcolor="b0ed80">  <td>19/07/08 09:10:54</td>   <td>8857</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.waitshoya()[pri:0, instance:tests.UserCanLoginTest@4516af24]">&lt;&lt;waitshoya</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1849201180</td>   <td></td> </tr>
-<tr bgcolor="b0ed80">  <td>19/07/08 09:10:54</td>   <td>8903</td> <td title="&lt;&lt;TestBase.stopDriver()[pri:0, instance:tests.UserCanLoginTest@4516af24]">&lt;&lt;stopDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1849201180</td>   <td></td> </tr>
+<tr bgcolor="6672ba">  <td>19/07/08 19:28:23</td>   <td>0</td> <td title="&gt;&gt;TestBase.startDriver(java.lang.String)[pri:0, instance:tests.UserCanLoginTest@77be656f]">&gt;&gt;startDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1405747618</td>   <td></td> </tr>
+<tr bgcolor="6672ba">  <td>19/07/08 19:28:35</td>   <td>11939</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.waitshoya2()[pri:0, instance:tests.UserCanLoginTest@77be656f]">&gt;&gt;waitshoya2</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Regression Test-1@620313029</td>   <td></td> </tr>
+<tr bgcolor="6672ba">  <td>19/07/08 19:28:35</td>   <td>11939</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.waitshoya2()[pri:0, instance:tests.Loginwithoutcredentials@19dc67c2]">&gt;&gt;waitshoya2</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Regression Test-2@948023928</td>   <td></td> </tr>
+<tr bgcolor="9e76fd">  <td>19/07/08 19:28:35</td>   <td>11974</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Loginwithoutcredentials.UserNoCredentials()[pri:0, instance:tests.Loginwithoutcredentials@19dc67c2]">UserNoCredentials</td> 
+  <td>TestNG-test=Regression Test-2@948023928</td>   <td></td> </tr>
+<tr bgcolor="b7649e">  <td>19/07/08 19:28:36</td>   <td>13303</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserCanLoginTest.User_Login(java.lang.String, java.lang.String)[pri:0, instance:tests.UserCanLoginTest@77be656f]">User_Login</td> 
+  <td>TestNG-test=Regression Test-1@620313029</td>   <td></td> </tr>
+<tr bgcolor="9e76fd">  <td>19/07/08 19:28:37</td>   <td>13856</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Loginwithoutcredentials.close()[pri:0, instance:tests.Loginwithoutcredentials@19dc67c2]">&lt;&lt;close</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Regression Test-2@948023928</td>   <td></td> </tr>
+<tr bgcolor="6672ba">  <td>19/07/08 19:28:39</td>   <td>16826</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.TakeScreen(org.testng.ITestResult)[pri:0, instance:tests.UserCanLoginTest@77be656f]">&lt;&lt;TakeScreen</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Regression Test-1@620313029</td>   <td></td> </tr>
+<tr bgcolor="6672ba">  <td>19/07/08 19:28:42</td>   <td>18947</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.TakeScreen(org.testng.ITestResult)[pri:0, instance:tests.Loginwithoutcredentials@19dc67c2]">&lt;&lt;TakeScreen</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Regression Test-2@948023928</td>   <td></td> </tr>
+<tr bgcolor="6672ba">  <td>19/07/08 19:28:42</td>   <td>18951</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.waitshoya()[pri:0, instance:tests.Loginwithoutcredentials@19dc67c2]">&lt;&lt;waitshoya</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Regression Test-2@948023928</td>   <td></td> </tr>
+<tr bgcolor="b7649e">  <td>19/07/08 19:28:42</td>   <td>19132</td> <td title="&lt;&lt;UserCanLoginTest.stopDriver()[pri:0, instance:tests.UserCanLoginTest@77be656f]">&lt;&lt;stopDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1405747618</td>   <td></td> </tr>
 </table>
